Regeldokumentasjon: Generere mermaid fra regler/evalueringer (#266)
* Regeldokumentasjon: Generere mermaid fra regler/evalueringer

* Støtte deserialisert json

* Mer eval-output: properties og outcome

* Mermaid for RuleService med header